# saumfar-cli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cache.rs  download.rs  feed.rs  main.rs  search.rs  ui.rs
