[package]
name = "saumfar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.32"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["stream"] }
roxmltree = "0.21.1"
tokio = { version = "1.52.2", features = ["full"] }
